--- a/src/class-notes/06-a--bar-chart.html
+++ b/src/class-notes/06-a--bar-chart.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Scatter HTML</title>
+  <title>bar chart</title>
   <style type="text/less">
     * { margin: 0; padding: 0; box-sizing: border-box; }
   </style>
